Add app & logo images

--- a/client/src/markup.html
+++ b/client/src/markup.html
@@ -11,6 +11,17 @@
 
     <title><%= htmlWebpackPlugin.options.title %></title>
 
+    <meta property="og:title" content="<%= htmlWebpackPlugin.options.title %>"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="<%= htmlWebpackPlugin.options.cover %>"/>
+    <meta property="og:url" content="<%= htmlWebpackPlugin.options.homepage %>"/>
+    <meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>"/>
+
+    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:title" content="<%= htmlWebpackPlugin.options.title %>"/>
+    <meta name="twitter:description" content="<%= htmlWebpackPlugin.options.description %>"/>
+    <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.cover %>"/>
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700" rel="stylesheet">
   </head>
 
